--- a/src/pages/video/control-bar/control-bar.component.html
+++ b/src/pages/video/control-bar/control-bar.component.html
@@ -7,23 +7,23 @@
  * @LastEditTime: 2021-11-11 15:30:55
 -->
 <div class="control_bar">
-  <app-image [imgData]="controlBg"></app-image>
-  <app-prod-info-button [imgData]="objectImgFrame" [productImg]="productData.img" (itemClick)="showProductInfo();"></app-prod-info-button>
-  <app-image-scale-button [imgData]="cameraBg" [buttonIcon]="cameraIcon" (itemClick)="toggle()" ></app-image-scale-button>
+  <app-image [imgData]="ui.controlBg"></app-image>
+  <app-prod-info-button [imgData]="ui.objectImgFrame" [productImg]="productData.img" (itemClick)="showProductInfo();"></app-prod-info-button>
+  <app-image-scale-button [imgData]="ui.cameraBg" [buttonIcon]="ui.cameraIcon" (itemClick)="toggle()" ></app-image-scale-button>
   <div *ngIf="!playing">
-    <app-image-scale-button [imgData]="addCoin" (itemClick)="showOocPo()"></app-image-scale-button>
-    <app-image-scale-button [imgData]="historyBg" [buttonIcon]="historyBtn" (itemClick)="showHistory()"></app-image-scale-button>
-    <app-play-button [imgData]="playBtnBg" [buttonIcon]="playBtnIcon" [coinIcon]="coinIcon" [soundUrl]="'assets/sound/start.mp3'" [price]="isFree?0:productData.price" (itemClick)="startPlay();" [smooth]="false"></app-play-button>
-    <app-image-scale-button [imgData]="occupiedBg" [buttonIcon]="occupiedIcon" [enabled]="false" *ngIf="occupied"></app-image-scale-button>
+    <app-image-scale-button [imgData]="ui.addCoin" (itemClick)="showOocPo()"></app-image-scale-button>
+    <app-image-scale-button [imgData]="ui.historyBg" [buttonIcon]="ui.historyBtn" (itemClick)="showHistory()"></app-image-scale-button>
+    <app-play-button [imgData]="ui.playBtnBg" [buttonIcon]="ui.playBtnIcon" [coinIcon]="ui.coinIcon" [soundUrl]="'assets/sound/start.mp3'" [price]="isFree?0:productData.price" (itemClick)="startPlay();" [smooth]="false"></app-play-button>
+    <app-image-scale-button [imgData]="ui.occupiedBg" [buttonIcon]="ui.occupiedIcon" [enabled]="false" *ngIf="occupied"></app-image-scale-button>
   </div>
   <div *ngIf="playing">
-    <app-image [imgData]="clockShadow"></app-image>
+    <app-image [imgData]="ui.clockShadow"></app-image>
     <app-text-field [positionRect]="timeRect" [text]="''+timeLeft" [color]="timeTextColor" [size]="48" [bold]="true"></app-text-field>
-    <app-image [imgData]="clockImg"></app-image>
-    <app-image-scale-button [imgData]="leftBtnBg" [buttonIcon]="leftBtn" (touchDown)="controlStartMachine(control_left)" (touchUp)="controlEndMachine(control_left)"></app-image-scale-button>
-    <app-image-scale-button [imgData]="upBtnBg" [buttonIcon]="upBtn" (touchDown)="controlStartMachine(control_up)" (touchUp)="controlEndMachine(control_up)"></app-image-scale-button>
-    <app-image-scale-button [imgData]="rightBtnBg" [buttonIcon]="rightBtn" (touchDown)="controlStartMachine(control_right)" (touchUp)="controlEndMachine(control_right)"></app-image-scale-button>
-    <app-image-scale-button [imgData]="downBtnBg" [buttonIcon]="downBtn" (touchDown)="controlStartMachine(control_down)" (touchUp)="controlEndMachine(control_down)"></app-image-scale-button>
-    <app-image-scale-button [imgData]="catchBtnBg" [buttonIcon]="catchBtn" [soundUrl]="'assets/sound/grab.mp3'" (itemClick)="catchDoll()"></app-image-scale-button>
+    <app-image [imgData]="ui.clockImg"></app-image>
+    <app-image-scale-button [imgData]="ui.leftBtnBg" [buttonIcon]="ui.leftBtn" (touchDown)="controlStartMachine(control_left)" (touchUp)="controlEndMachine(control_left)"></app-image-scale-button>
+    <app-image-scale-button [imgData]="ui.upBtnBg" [buttonIcon]="ui.upBtn" (touchDown)="controlStartMachine(control_up)" (touchUp)="controlEndMachine(control_up)"></app-image-scale-button>
+    <app-image-scale-button [imgData]="ui.rightBtnBg" [buttonIcon]="ui.rightBtn" (touchDown)="controlStartMachine(control_right)" (touchUp)="controlEndMachine(control_right)"></app-image-scale-button>
+    <app-image-scale-button [imgData]="ui.downBtnBg" [buttonIcon]="ui.downBtn" (touchDown)="controlStartMachine(control_down)" (touchUp)="controlEndMachine(control_down)"></app-image-scale-button>
+    <app-image-scale-button [imgData]="ui.catchBtnBg" [buttonIcon]="ui.catchBtn" [soundUrl]="'assets/sound/grab.mp3'" (itemClick)="catchDoll()"></app-image-scale-button>
   </div>
 </div>
