--- a/src/popups/daily-bonus/daily-bonus.component.html
+++ b/src/popups/daily-bonus/daily-bonus.component.html
@@ -8,8 +8,8 @@
 -->
 <div [ngStyle]="dailyStyle">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
-  <app-image [imgData]="popupBg"></app-image>
+  <app-image [imgData]="ui.popupBg"></app-image>
   <app-popup-text-field [textData]="dayRowText" [text]="dayNumberStr"></app-popup-text-field>
-  <app-image-button [imgData]="closeBtn" (itemClick)="closePo()" ></app-image-button>
+  <app-image-button [imgData]="ui.closeBtn" (itemClick)="closePo()" ></app-image-button>
   <app-daily-item *ngFor="let item of dailyList; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"  (dailyEvent)="dailyItemEventListener($event)"></app-daily-item>
 </div>
