--- a/src/popups/daily-bonus/daily-item/daily-item.component.html
+++ b/src/popups/daily-bonus/daily-item/daily-item.component.html
@@ -7,13 +7,13 @@
  * @LastEditTime: 2021-12-31 16:30:37
 -->
 <div [ngStyle]="styles.position">
-  <app-image [imgData]="dailyItemBg"></app-image>
-  <app-image [imgData]="coinIcon"></app-image>>
+  <app-image [imgData]="ui.dailyItemBg"></app-image>
+  <app-image [imgData]="ui.coinIcon"></app-image>>
   <app-popup-text-field [textData]="titleText" [text]="'Day ' + iNumber"></app-popup-text-field>
   <app-popup-text-field [textData]="coinText" [text]="'x ' + itemData"></app-popup-text-field>
   <img src="assets/daily_bonus/hand.gif" [ngStyle]="styles.handImg" *ngIf="showHand">
   <div *ngIf="showMask" [ngStyle]="styles.passedMask"></div>
-  <app-image [imgData]="greenCheck" *ngIf="showMask"></app-image>
+  <app-image [imgData]="ui.greenCheck" *ngIf="showMask"></app-image>
   <img src="assets/daily_bonus/bones gif.gif" *ngIf="gettingDailyBonus">
-  <app-image-button [imgData]="clickArea" *ngIf="canGetBonus" (itemClick)="getDailyBonus()"></app-image-button>
+  <app-image-button [imgData]="ui.clickArea" *ngIf="canGetBonus" (itemClick)="getDailyBonus()"></app-image-button>
 </div>
