--- a/src/popups/force-update/force-update.component.html
+++ b/src/popups/force-update/force-update.component.html
@@ -8,7 +8,7 @@
 -->
 <div [ngStyle]="styles.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
-  <app-image [imgData]="popupBg"></app-image>
-  <app-image [imgData]="title"></app-image>
-  <app-image-button [imgData]="updateBtn" (itemClick)="update()"></app-image-button>
+  <app-image [imgData]="ui.popupBg"></app-image>
+  <app-image [imgData]="ui.title"></app-image>
+  <app-image-button [imgData]="ui.updateBtn" (itemClick)="update()"></app-image-button>
 </div>
