--- a/src/popups/generic-popup/generic-popup.component.html
+++ b/src/popups/generic-popup/generic-popup.component.html
@@ -8,8 +8,8 @@
 -->
 <div [ngStyle]="styles.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
-  <app-image [imgData]="popupBg"></app-image>
-  <app-image [imgData]="titleBg"></app-image>
-  <app-image-button [imgData]="confirmBtn" (itemClick)="confirmPo()" ></app-image-button>
-  <app-image-button [imgData]="closeBtn" (itemClick)="closePo()" ></app-image-button>
+  <app-image [imgData]="ui.popupBg"></app-image>
+  <app-image [imgData]="ui.titleBg"></app-image>
+  <app-image-button [imgData]="ui.confirmBtn" (itemClick)="confirmPo()" ></app-image-button>
+  <app-image-button [imgData]="ui.closeBtn" (itemClick)="closePo()" ></app-image-button>
 </div>
