--- a/src/popups/get-vip/get-vip.component.html
+++ b/src/popups/get-vip/get-vip.component.html
@@ -8,7 +8,7 @@
 -->
 <div [ngStyle]="styles.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
-  <app-image [imgData]="popupBg"></app-image>
-  <app-image-button [imgData]="closeBtn" (itemClick)="closePo()"></app-image-button>
-  <app-image-button [imgData]="okBtn" (itemClick)="getVip()"></app-image-button>
+  <app-image [imgData]="ui.popupBg"></app-image>
+  <app-image-button [imgData]="ui.closeBtn" (itemClick)="closePo()"></app-image-button>
+  <app-image-button [imgData]="ui.okBtn" (itemClick)="getVip()"></app-image-button>
 </div>
