--- a/src/popups/product-info/product-info.component.html
+++ b/src/popups/product-info/product-info.component.html
@@ -10,10 +10,10 @@
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <img [src]="productImg" (load)="productImgLoaded()" [ngStyle]="styles.productImg"/>
   <app-simple-movie-clip [movieClip]="guang"></app-simple-movie-clip>
-  <app-image [imgData]="popupBg"></app-image>
-  <app-image-button [imgData]="goBtn" (itemClick)="goPlay()" ></app-image-button>
-  <app-image-button [imgData]="closeBtn" (itemClick)="closePo()" ></app-image-button>
-  <app-image [imgData]="vip" *ngIf="isVip"></app-image>
+  <app-image [imgData]="ui.popupBg"></app-image>
+  <app-image-button [imgData]="ui.goBtn" (itemClick)="goPlay()" ></app-image-button>
+  <app-image-button [imgData]="ui.closeBtn" (itemClick)="closePo()" ></app-image-button>
+  <app-image [imgData]="ui.vip" *ngIf="isVip"></app-image>
   <app-popup-text-field [textData]="nameText" [text]="nameString"></app-popup-text-field>
   <div class="tipTextStyle" [ngStyle]="styles.tipTextStyle">
     <span class="tipSpan">{{tipString}}</span>
