--- a/src/popups/purchase-success/purchase-success.component.html
+++ b/src/popups/purchase-success/purchase-success.component.html
@@ -8,7 +8,7 @@
 -->
 <div [ngStyle]="styles.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
-  <app-image-rotating [imgData]="light"></app-image-rotating>
-  <app-image [imgData]="popupBg"></app-image>
-  <app-image-button [imgData]="collectBtn" (itemClick)="collect()"></app-image-button>
+  <app-image-rotating [imgData]="ui.light"></app-image-rotating>
+  <app-image [imgData]="ui.popupBg"></app-image>
+  <app-image-button [imgData]="ui.collectBtn" (itemClick)="collect()"></app-image-button>
 </div>
