--- a/src/popups/result/result-win/result-win.component.html
+++ b/src/popups/result/result-win/result-win.component.html
@@ -8,13 +8,13 @@
 -->
 <div [ngStyle]="styles.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
-  <app-image [imgData]="popupBg"></app-image>
-  <app-image-button [imgData]="closeBtn" (itemClick)="gotoPrize()"></app-image-button>
-  <app-image-button [imgData]="okBtn" (itemClick)="retry()"></app-image-button>
+  <app-image [imgData]="ui.popupBg"></app-image>
+  <app-image-button [imgData]="ui.closeBtn" (itemClick)="gotoPrize()"></app-image-button>
+  <app-image-button [imgData]="ui.okBtn" (itemClick)="retry()"></app-image-button>
   <img [src]="productImg" [ngStyle]="styles.productStyle"/>
-  <app-image [imgData]="photoFrame"></app-image>
+  <app-image [imgData]="ui.photoFrame"></app-image>
   <div class="noneSelect">
-    <app-image [imgData]="coinIcon"></app-image>
+    <app-image [imgData]="ui.coinIcon"></app-image>
     <app-popup-text-field [textData]="priceText" [text]="price+''"></app-popup-text-field>
   </div>
   <app-popup-text-field [textData]="winText" [text]="winString"></app-popup-text-field>
