--- a/src/popups/welcome/welcome.component.html
+++ b/src/popups/welcome/welcome.component.html
@@ -8,10 +8,10 @@
 -->
 <div [ngStyle]="styles.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
-  <app-image [imgData]="popupBg"></app-image>
-  <app-image [imgData]="title"></app-image>
-  <app-image [imgData]="present"></app-image>
-  <app-image-button [imgData]="okBtn" (itemClick)="closePo()"></app-image-button>
+  <app-image [imgData]="ui.popupBg"></app-image>
+  <app-image [imgData]="ui.title"></app-image>
+  <app-image [imgData]="ui.present"></app-image>
+  <app-image-button [imgData]="ui.okBtn" (itemClick)="closePo()"></app-image-button>
   <app-popup-text-field [textData]="coinText" [text]="coinNumberText"></app-popup-text-field>
   <app-popup-text-field [textData]="coinStText" [text]="coinStringText"></app-popup-text-field>
 </div>
