--- a/src/pages/before-lobby/start-up/start-up.component.html
+++ b/src/pages/before-lobby/start-up/start-up.component.html
@@ -6,8 +6,8 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2022-01-06 13:56:30
 -->
-<div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="styles.stretchingBg">
-    <div #startPageEntity [ngStyle]="styles.startPageEntity">
+<div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="sty.stretchingBg">
+    <div #startPageEntity [ngStyle]="sty.startPageEntity">
         <div *ngFor="let item of tipPagesForShow; let i = index" [style.left]="750 * (i-1) + 'px'">
             <app-image [imgData]="item"></app-image>
             <app-image-button [imgData]="getBtnUI(i)"></app-image-button>
