--- a/src/pages/my/about-us/about-us.component.html
+++ b/src/pages/my/about-us/about-us.component.html
@@ -6,10 +6,10 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2022-01-07 16:36:06
 -->
-<div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="styles.stretchingBg">
+<div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="sty.stretchingBg">
   <app-image [imgData]="ui.title"></app-image>
   <app-image-button [imgData]="ui.backBtn" (itemClick)="gotoBack()"></app-image-button>
-  <div [ngStyle]="styles.mOffset">
+  <div [ngStyle]="sty.mOffset">
     <app-image [imgData]="ui.gameIcon"></app-image>
     <app-popup-text-field [textData]="gameNameText" [text]="gameNameString"></app-popup-text-field>
     <app-popup-text-field [textData]="versionText" [text]="versionString"></app-popup-text-field>
