--- a/src/pages/my/ledger/ledger-item/ledger-item.component.html
+++ b/src/pages/my/ledger/ledger-item/ledger-item.component.html
@@ -10,5 +10,5 @@
   <app-image [imgData]="ui.itemBg"></app-image>
   <div class="timeDiv">{{line1Str}}<br/>{{line2Str}}</div>
   <div class="noteDiv">{{noteStr}}</div>
-  <div class="changeDiv"><div class="colorClass" [ngStyle]="styles.colorClass">{{changeStr}}</div></div>
+  <div class="changeDiv"><div class="colorClass" [ngStyle]="sty.colorClass">{{changeStr}}</div></div>
 </div>
