--- a/src/pages/my/user-center/user-center-item/user-center-item.component.html
+++ b/src/pages/my/user-center/user-center-item/user-center-item.component.html
@@ -10,6 +10,6 @@
   <app-image [imgData]="ui.itemBg"></app-image>
   <app-image [imgData]="ui.arrow"></app-image>
   <app-image [imgData]="ui.mainIcon"></app-image>
-  <app-popup-text-field [textData]="tipText" [text]="tipString" [shadowObj]="styles.lightTextShadow"></app-popup-text-field>
+  <app-popup-text-field [textData]="tipText" [text]="tipString" [shadowObj]="sty.lightTextShadow"></app-popup-text-field>
   <a href="{{linkString}}" *ngIf="outLink" target="{{linkTarget}}"><div class="outLick"></div></a>
 </div>
