--- a/src/popups/exchange/exchange.component.html
+++ b/src/popups/exchange/exchange.component.html
@@ -6,12 +6,12 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2022-01-05 14:13:22
 -->
-<div [ngStyle]="styles.popupOffset">
+<div [ngStyle]="sty.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image [imgData]="ui.popupBg"></app-image>
   <app-image-button [imgData]="ui.closeBtn" (itemClick)="closePo()"></app-image-button>
   <app-image-button [imgData]="ui.okBtn" (itemClick)="exchangeToTicket()"></app-image-button>
   <app-popup-text-field [textData]="tipText" [text]="tipString"></app-popup-text-field>
-  <div class="popupText" [ngStyle]="styles.popupText">Do you want to exchange your</div>
+  <div class="popupText" [ngStyle]="sty.popupText">Do you want to exchange your</div>
   <app-image [imgData]="ui.ticketIcon"></app-image>
 </div>
