--- a/src/service/ui/bottom-bar/bottom-bar.component.html
+++ b/src/service/ui/bottom-bar/bottom-bar.component.html
@@ -6,7 +6,7 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2022-01-10 15:54:18
 -->
-<div [ngStyle]="styles.bottomBar">
+<div [ngStyle]="sty.bottomBar">
   <app-image [imgData]="ui.bottomBg"></app-image>
   <app-image-button [imgData]="ui.home" (itemClick)="gotoLobby()" *ngIf="iconBigIndex!=0"></app-image-button>
   <app-image-button [imgData]="ui.shop" (itemClick)="gotoBank()" *ngIf="iconBigIndex!=1"></app-image-button>
