--- a/src/pages/lobby/category-bar/category-bar.component.html
+++ b/src/pages/lobby/category-bar/category-bar.component.html
@@ -10,11 +10,11 @@
   <app-image [imgData]="ui.iconListBg"></app-image>
   <div class="categoryContainer widthApp">
     <div #carousel></div>
-    <div [ngStyle]="styles.iconParent">
-      <div *ngFor="let icon of showingIcons; let i = index" [ngStyle]="styles.icon" [style.transform]="i | categoryPipe : dragElement.scrollX">
+    <div [ngStyle]="sty.iconParent">
+      <div *ngFor="let icon of showingIcons; let i = index" [ngStyle]="sty.icon" [style.transform]="i | categoryPipe : dragElement.scrollX">
         <img [src]="icon.class_img" class="categoryIcon">
       </div>
-      <div [ngStyle]="styles.mask" [style.transform]="styles.maskTransform" [style.background-image]="'url(assets/product_list/bg.png)'">
+      <div [ngStyle]="sty.mask" [style.transform]="sty.maskTransform" [style.background-image]="'url(assets/product_list/bg.png)'">
         <app-image [imgData]="ui.iconListBg"></app-image>
       </div>
   </div>
