--- a/src/pages/lobby/product-item/product-item.component.html
+++ b/src/pages/lobby/product-item/product-item.component.html
@@ -6,10 +6,10 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2022-01-17 10:04:25
 -->
-<div [ngStyle]="styles.position" [attr.itemdata]="index" (click)="onItemClick($event)">
+<div [ngStyle]="sty.position" [attr.itemdata]="index" (click)="onItemClick($event)">
   <app-image [imgData]="ui.productBg"></app-image>
-  <div [ngStyle]="styles.productPicPosition">
-    <img [src]="itemData.img | gifToPng" width="320px" height="308px" [ngStyle]="styles.productImageStyle" (load)="onImgload()">
+  <div [ngStyle]="sty.productPicPosition">
+    <img [src]="itemData.img | gifToPng" width="320px" height="308px" [ngStyle]="sty.productImageStyle" (load)="onImgload()">
   </div>
   <app-image [imgData]="ui.vipFlag" *ngIf="isVip"></app-image>
   <app-image [imgData]="ui.coinIcon" *ngIf="!isFree"></app-image>
