--- a/src/pages/my/edit-address/edit-address.component.html
+++ b/src/pages/my/edit-address/edit-address.component.html
@@ -6,10 +6,10 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2022-01-10 13:57:33
 -->
-<div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="styles.stretchingBg">
-  <div [ngStyle]="styles.scrollBar" [style.height]="pageHeight + 'px'">
+<div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="sty.stretchingBg">
+  <div [ngStyle]="sty.scrollBar" [style.height]="pageHeight + 'px'">
     <app-image-button [imgData]="ui.backBtn" (itemClick)="gotoBack()"></app-image-button>
-    <div [ngStyle]="styles.addressList">
+    <div [ngStyle]="sty.addressList">
       <app-address-edit-input [imgData]="ui.firstNameInput" [inputRect]="nameRect" [defautText]="'first name'" [text]="firstName" (textChange)="firstNameChange($event)"></app-address-edit-input>
       <app-address-edit-input [imgData]="ui.lasetNameInput" [inputRect]="nameRect" [defautText]="'last name'" [text]="lasetName" (textChange)="lasetNameChange($event)"></app-address-edit-input>
       <app-address-edit-input [imgData]="ui.phoneNumInput" [inputRect]="inputRect" [defautText]="'cellphone num'" [text]="phoneNum" (textChange)="phoneNumChange($event)"></app-address-edit-input>
