--- a/src/pages/my/sound-and-logout/sound-and-logout.component.html
+++ b/src/pages/my/sound-and-logout/sound-and-logout.component.html
@@ -6,16 +6,16 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2022-01-10 15:42:25
 -->
-<div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="styles.stretchingBg">
+<div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="sty.stretchingBg">
   <app-image [imgData]="ui.title"></app-image>
   <app-image-button [imgData]="ui.backBtn" (itemClick)="gotoBack()"></app-image-button>
-  <div [ngStyle]="styles.bottom"><app-image-button [imgData]="ui.logoutBtn" (itemClick)="logout()"></app-image-button></div>
+  <div [ngStyle]="sty.bottom"><app-image-button [imgData]="ui.logoutBtn" (itemClick)="logout()"></app-image-button></div>
   <app-image [imgData]="ui.soundEffectSettingBg"></app-image>
   <app-image [imgData]="ui.musicSettingBg"></app-image>
   <app-image-button [imgData]="ui.soundEffectOnBtn" (itemClick)="setSoundEffect( true )" *ngIf="soundEffectOn"></app-image-button>
   <app-image-button [imgData]="ui.soundOnBtn" (itemClick)="setMusic( true )" *ngIf="soundOn"></app-image-button>
   <app-image-button [imgData]="ui.soundEffectOffBtn" (itemClick)="setSoundEffect( false )" *ngIf="!soundEffectOn"></app-image-button>
   <app-image-button [imgData]="ui.soundOffBtn" (itemClick)="setMusic( false )" *ngIf="!soundOn"></app-image-button>
-  <app-popup-text-field [textData]="soundEffectText" [text]="soundEffectString" [shadowObj]="styles.lightTextShadow"></app-popup-text-field>
-  <app-popup-text-field [textData]="musicText" [text]="musicString" [shadowObj]="styles.lightTextShadow"></app-popup-text-field>
+  <app-popup-text-field [textData]="soundEffectText" [text]="soundEffectString" [shadowObj]="sty.lightTextShadow"></app-popup-text-field>
+  <app-popup-text-field [textData]="musicText" [text]="musicString" [shadowObj]="sty.lightTextShadow"></app-popup-text-field>
 </div>
