--- a/src/pages/my/video-record/record-item/record-item.component.html
+++ b/src/pages/my/video-record/record-item/record-item.component.html
@@ -8,10 +8,10 @@
 -->
 <div [style.top]="index * 201 + 10 + 'px'" (click)="onItemClick($event)">
   <app-image [imgData]="ui.itemBg"></app-image>
-  <img [src]="itemData.img" class="productImg" [ngStyle]="styles.productImg"/>
+  <img [src]="itemData.img" class="productImg" [ngStyle]="sty.productImg"/>
   <app-image [imgData]="ui.winIcon" *ngIf="isWin"></app-image>
-  <div class="title" [ngStyle]="styles.title">{{itemData.title}}</div>
-  <div class="create" [ngStyle]="styles.create">{{createTime}}</div>
+  <div class="title" [ngStyle]="sty.title">{{itemData.title}}</div>
+  <div class="create" [ngStyle]="sty.create">{{createTime}}</div>
   <app-image-button [imgData]="ui.playBtn" (itemClick)="play()"></app-image-button>
   <app-image-button [imgData]="ui.shareBtn" (itemClick)="share()"></app-image-button>
 </div>
