--- a/src/pages/order-for-goods/order-for-goods.component.html
+++ b/src/pages/order-for-goods/order-for-goods.component.html
@@ -6,12 +6,12 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2022-01-10 11:16:57
 -->
-<div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="styles.stretchingBg">
+<div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="sty.stretchingBg">
   <app-image [imgData]="ui.title"></app-image>
   <app-image-button [imgData]="ui.backBtn" (itemClick)="gotoBack()"></app-image-button>
-  <div class="orderListContainer" [style.height]="pageHeight - 220 + 'px'" [ngStyle]="styles.orderListContainer"></div>
+  <div class="orderListContainer" [style.height]="pageHeight - 220 + 'px'" [ngStyle]="sty.orderListContainer"></div>
   <div *ngIf="showOnprogress">
-    <div [ngStyle]="styles.scrollBar" [style.height]="pageHeight - 350 + 'px'">
+    <div [ngStyle]="sty.scrollBar" [style.height]="pageHeight - 350 + 'px'">
       <app-order-item *ngFor="let item of orderProgressList; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-order-item>
     </div>
     <div *ngIf="!orderProgressList.length">
@@ -22,7 +22,7 @@
     <app-image-button [imgData]="ui.compBtn" (itemClick)="changeList()"></app-image-button>
   </div>
   <div *ngIf="!showOnprogress">
-    <div [ngStyle]="styles.scrollBar" [style.height]="pageHeight - 350 + 'px'">
+    <div [ngStyle]="sty.scrollBar" [style.height]="pageHeight - 350 + 'px'">
       <app-order-item *ngFor="let item of orderCompleteList; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-order-item>
     </div>
     <div *ngIf="!orderCompleteList.length">
