--- a/src/pages/prize/prize-item/prize-item.component.html
+++ b/src/pages/prize/prize-item/prize-item.component.html
@@ -8,15 +8,15 @@
 -->
 <div [style.top]="index * 208 + 'px'" (click)="onItemClick($event)">
   <app-image [imgData]="ui.itemBg"></app-image>
-  <div [ngStyle]="styles.productImgage">
+  <div [ngStyle]="sty.productImgage">
     <img [attr.src]="itemData.img" width="170" height="170"/>
   </div>
   <app-image [imgData]="ui.imageFrame"></app-image>
   <app-image-button [imgData]="ui.infoIcon" (itemClick)="showInfo()"></app-image-button>
-  <div class="title" [ngStyle]="styles.title">{{itemData.name}}</div>
-  <div class="blackText" [ngStyle]="styles.create">{{createTime}}</div>
-  <div class="blackText" [ngStyle]="styles.expire" *ngIf="!isExpire">{{expireTime}}</div>
-  <div class="hasExpired" [ngStyle]="styles.hasExpired" *ngIf="isExpire">expired</div>
+  <div class="title" [ngStyle]="sty.title">{{itemData.name}}</div>
+  <div class="blackText" [ngStyle]="sty.create">{{createTime}}</div>
+  <div class="blackText" [ngStyle]="sty.expire" *ngIf="!isExpire">{{expireTime}}</div>
+  <div class="hasExpired" [ngStyle]="sty.hasExpired" *ngIf="isExpire">expired</div>
   <app-image-button [imgData]="ui.sellBtn" (itemClick)="sellTicket()"></app-image-button>
   <app-image-button [imgData]="ui.packBtn" (itemClick)="packageItems()"></app-image-button>
 </div>
