--- a/src/pages/prize/prize.component.html
+++ b/src/pages/prize/prize.component.html
@@ -6,14 +6,14 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2022-01-10 12:18:38
 -->
-<div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="styles.stretchingBg">
-  <div class="prizeListContainer" [style.height]="pageHeight - 220 + 'px'" [ngStyle]="styles.prizeListContainer"></div>
+<div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="sty.stretchingBg">
+  <div class="prizeListContainer" [style.height]="pageHeight - 220 + 'px'" [ngStyle]="sty.prizeListContainer"></div>
   <div *ngIf="showPrize">
-    <div [ngStyle]="styles.scrollBar" [style.height]="pageHeight - 350 + 'px'">
+    <div [ngStyle]="sty.scrollBar" [style.height]="pageHeight - 350 + 'px'">
       <app-prize-item *ngFor="let item of prizeList; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemDelete)="onItemDelete($event)"></app-prize-item>
     </div>
     <div *ngIf="!prizeList.length">
-      <div class="noOrder" [ngStyle]="styles.noOrder">No Prize Won Yet</div>
+      <div class="noOrder" [ngStyle]="sty.noOrder">No Prize Won Yet</div>
       <app-image [imgData]="ui.shocked"></app-image>
     </div>
     <app-image [imgData]="ui.allPrizeIcon"></app-image>
@@ -23,9 +23,9 @@
     <app-image-button [imgData]="ui.allPrizeBtn" (itemClick)="switchPannel( true )"></app-image-button>
     <app-image [imgData]="ui.packageIcon"></app-image>
     <app-image-button [imgData]="ui.addressBtn" (itemClick)="editAddress()"></app-image-button>
-    <div [ngStyle]="styles.addressDiv">
+    <div [ngStyle]="sty.addressDiv">
       <div class="firstLine"><span class="spanBold">{{itemData.first_name}}&nbsp;&nbsp;{{itemData.last_name}}</span><span class="spanGray">{{itemData.tel}}</span></div>
-      <div class="allElse" [ngStyle]="styles.allElse">{{mainString}}</div>
+      <div class="allElse" [ngStyle]="sty.allElse">{{mainString}}</div>
       <app-image [imgData]="ui.arrowIcon"></app-image>
     </div>
     <app-image-button [imgData]="ui.addBtn" (itemClick)="addOrder()"></app-image-button>
