--- a/src/pages/shop/ticket-item/ticket-item.component.html
+++ b/src/pages/shop/ticket-item/ticket-item.component.html
@@ -6,8 +6,8 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2022-01-06 15:00:58
 -->
-<div [ngStyle]="styles.ticketItem" (click)="onItemClick($event)">
-  <img src={{itemData.img}} (load)="onImgload()" [ngStyle]="styles.ticketItemImage"/>
+<div [ngStyle]="sty.ticketItem" (click)="onItemClick($event)">
+  <img src={{itemData.img}} (load)="onImgload()" [ngStyle]="sty.ticketItemImage"/>
   <app-image [imgData]="ui.ticketItemBg"></app-image>
   <app-image-button [imgData]="ui.infoIcon"></app-image-button>
   <app-image-button [imgData]="ui.buyBtn"></app-image-button>
