--- a/src/pages/shop/vip-level-list/vip-level-list.component.html
+++ b/src/pages/shop/vip-level-list/vip-level-list.component.html
@@ -6,7 +6,7 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2022-01-10 14:16:01
 -->
-<div [ngStyle]="styles.scrollBar" [style.height]="listHeight + 'px'">
+<div [ngStyle]="sty.scrollBar" [style.height]="listHeight + 'px'">
   <app-image [imgData]="ui.lightImg"></app-image>
   <app-image-button [imgData]="ui.vip1" (itemClick)="onListItemClick(0)"></app-image-button>
   <app-image-button [imgData]="ui.vip2" (itemClick)="onListItemClick(1)"></app-image-button>
@@ -16,7 +16,7 @@
     <app-image [imgData]="ui.crown"></app-image>
   </div>
   <app-image [imgData]="ui.hand"></app-image>
-  <app-popup-text-field [textData]="titleText" [text]="titleString" [shadowObj]="styles.lightTextShadow"></app-popup-text-field>
+  <app-popup-text-field [textData]="titleText" [text]="titleString" [shadowObj]="sty.lightTextShadow"></app-popup-text-field>
   <div class="tipText"></div>
   <div [hidden]="showEndTime">
     <app-image-button [imgData]="ui.buyBtn" (itemClick)="onListItemClick('buyVip')"></app-image-button>
