--- a/src/popups/purchase-success/purchase-success.component.html
+++ b/src/popups/purchase-success/purchase-success.component.html
@@ -6,7 +6,7 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2021-12-31 16:07:46
 -->
-<div [ngStyle]="styles.popupOffset">
+<div [ngStyle]="sty.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image-rotating [imgData]="ui.light"></app-image-rotating>
   <app-image [imgData]="ui.popupBg"></app-image>
