--- a/src/popups/video-error/video-error.component.html
+++ b/src/popups/video-error/video-error.component.html
@@ -6,7 +6,7 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2021-12-31 16:08:00
 -->
-<div [ngStyle]="styles.popupOffset">
+<div [ngStyle]="sty.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image [imgData]="ui.popupBg"></app-image>
   <div class="confirmText">{{tipString}}</div>
