fix rotate image

--- a/src/service/ui/image-rotating/image-rotating.component.html
+++ b/src/service/ui/image-rotating/image-rotating.component.html
@@ -6,4 +6,4 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2022-01-13 10:08:38
 -->
-<div [style]="imgStyle" #carousel></div>
+<div [style]="imgStyle" [style.transform]="'rotateZ(' + rotate + 'deg)'"></div>
