--- a/src/pages/my/video-record/video-record.component.html
+++ b/src/pages/my/video-record/video-record.component.html
@@ -10,7 +10,7 @@
   <app-image [imgData]="ui.title"></app-image>
   <app-image-button [imgData]="ui.backBtn" (itemClick)="gotoBack()"></app-image-button>
   <div [style.height]="pageHeight - 220 + 'px'" [ngStyle]="sty.videoList">
-    <div [ngStyle]="sty.scrollBar" [style.height]="pageHeight - 350 + 'px'">
+    <div [ngStyle]="sty.scrollBar" [appScrollBar]="pageHeight-350">
       <app-record-item *ngFor="let item of recordDatas; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-record-item>
     </div>
   </div>
