--- a/src/pages/my/contact-us/contact-us.component.html
+++ b/src/pages/my/contact-us/contact-us.component.html
@@ -7,7 +7,7 @@
  * @LastEditTime: 2022-01-10 12:05:47
 -->
 <div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="sty.stretchingBg">
-  <div [ngStyle]="sty.scrollBar" [style.height]="pageHeight + 'px'">
+  <div class="widthApp" [appScrollBar]="pageHeight">
     <app-image [imgData]="ui.title"></app-image>
     <app-image-button [imgData]="ui.backBtn" (itemClick)="gotoBack()"></app-image-button>
     <form>
