--- a/src/pages/my/ledger/ledger.component.html
+++ b/src/pages/my/ledger/ledger.component.html
@@ -19,7 +19,7 @@
   <div *ngIf="!showCoinList">
     <app-image-button [imgData]="ui.coinBtn" (itemClick)="switchList(1)"></app-image-button>
     <app-image [imgData]="ui.ticketIcon"></app-image>
-    <div [ngStyle]="sty.scrollBar" [style.height]="pageHeight - 395 + 'px'">
+    <div [ngStyle]="sty.scrollBar" [appScrollBar]="pageHeight-395">
       <app-ledger-item *ngFor="let item of ticketChangeList; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-ledger-item>
     </div>
   </div>
