--- a/src/pages/shop/vip-level-list/vip-level-list.component.html
+++ b/src/pages/shop/vip-level-list/vip-level-list.component.html
@@ -6,7 +6,7 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2022-01-10 14:16:01
 -->
-<div [ngStyle]="sty.scrollBar" [style.height]="listHeight + 'px'">
+<div [ngStyle]="sty.scrollBar" [appScrollBar]="listHeight">
   <app-image [imgData]="ui.lightImg"></app-image>
   <app-image-button [imgData]="ui.vip1" (itemClick)="onListItemClick(0)"></app-image-button>
   <app-image-button [imgData]="ui.vip2" (itemClick)="onListItemClick(1)"></app-image-button>
